Updated multivalues handling to treat them as lists, and update plans and tests